# bazel-concatjs-ngrx-issue

./: BUILD.bazel  README.md  WORKSPACE  dependencies.bzl  package.json  patch-ngrx.js
services/client/: BUILD.bazel  main.html  manifest.webmanifest  tsconfig.json
services/client/app/: BUILD.bazel  app-base.module.ts  app-dev.module.ts  app-prod-browser.module.ts  app-prod.module.ts  app-routing.module.ts  app.component.ts
services/client/store/: BUILD.bazel  store.module.ts
