load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/client:__subpackages__"])

sass_binary(
    name = "app_styles",
    src = "app.component.sass",
)

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
        "app-routing.module.ts",
    ],
    angular_assets = ["app_styles"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "//services/client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "base",
        "//services/client/store",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/service-worker",
        "@npm//@ngrx/store-devtools",
    ],
)

ng_ts_library(
    name = "prod_browser",
    srcs = ["app-prod-browser.module.ts"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        ":base",
        "//services/client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "base",
        "//services/client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/service-worker",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "server",
    srcs = ["app.server.module.ts"],
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "base",
        "prod",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-server",
    ],
)
