load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/client:__subpackages__"])

ng_ts_library(
    name = "store",
    srcs = glob(["**/*.ts"]),
    module_name = "@client/store",
    tsconfig = "//services/client:tsconfig.json",
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
